syntax = "proto3";

package katium.client.qq.message;

option java_package = "katium.client.qq.network.pb";
option java_outer_classname = "PbMessageElements";

message Element {
  optional PlainText plainText = 1;
  //optional Face face = 2;
  //optional OnlineImage onlineImage = 3;
  optional NotOnlineImage notOnlineImage = 4;
  /*optional TransElem transElemInfo = 5;
  optional MarketFace marketFace = 6;
  //ElemFlags elemFlags = 7;*/
  optional CustomFace customFace = 8;
  /*optional ElemFlags2 elemFlags2 = 9;
  //FunFace funFace = 10;
  //SecretFileMsg secretFile = 11;
  optional RichMsg richMsg = 12;
  optional GroupFile groupFile = 13;
  //PubGroup pubGroup = 14;
  //MarketTrans marketTrans = 15;
  optional ExtraInfo extraInfo = 16;
  //ShakeWindow? shakeWindow = 17;
  //PubAccount? pubAccount = 18;
  optional VideoFile videoFile = 19;
  //TipsInfo? tipsInfo = 20;*/
  optional AnonymousGroupMessage anonymousInfo = 21;
  /*//QQLiveOld? qqLiveOld = 22;
  //LifeOnlineAccount? lifeOnline = 23;
  optional QQWalletMsg QQWalletMsg = 24;
  //CrmElem? crmElem = 25;
  //ConferenceTipsInfo? conferenceTipsInfo = 26;
  //RedBagInfo? redbagInfo = 27;
  //LowVersionTips? lowVersionTips = 28;
  //bytes bankcodeCtrlInfo = 29;
  //NearByMessageType? nearByMsg = 30;
  optional CustomElem customElem = 31;
  //LocationInfo? locationInfo = 32;
  //PubAccInfo? pubAccInfo = 33;
  //SmallEmoji? smallEmoji = 34;
  //FSJMessageElem? fsjMsgElem = 35;
  //ArkAppElem? arkApp = 36;
  optional GeneralFlags generalFlags = 37;
  //CustomFace? hcFlashPic = 38;
  //DeliverGiftMsg? deliverGiftMsg = 39;
  //BitAppMsg? bitappMsg = 40;
  //OpenQQData? openQqData = 41;
  //ApolloActMsg? apolloMsg = 42;
  //GroupPubAccountInfo? groupPubAccInfo = 43;
  //BlessingMessage? blessMsg = 44;
  optional SourceMsg srcMsg = 45;
  //LolaMsg? lolaMsg = 46;
  //GroupBusinessMsg? groupBusinessMsg = 47;
  //WorkflowNotifyMsg? msgWorkflowNotify = 48;
  //PatsElem? patElem = 49;
  //GroupPostElem? groupPostElem = 50;
  optional LightAppElem lightApp = 51;
  //EIMInfo? eimInfo = 52;
  optional CommonElem commonElem = 53;*/
}

message PlainText {
  string string = 1;
  optional string link = 2;
  optional bytes attribute6Buf = 3;
  optional bytes attribute7Buf = 4;
  optional bytes buffer = 11;
  optional bytes pbReserve = 12;
}

message NotOnlineImage {
  string filePath = 1;
  optional int32 fileLen = 2;
  string downloadPath = 3;
  optional bytes oldVerSendFile = 4;
  optional int32 imgType = 5;
  optional bytes previewsImage = 6;
  bytes pictureMd5 = 7;
  optional int32 pictureHeight = 8;
  optional int32 pictureWidth = 9;
  string resourceID = 10;
  optional bytes flag = 11;
  optional string thumbUrl = 12;
  optional int32 original = 13;
  optional string bigUrl = 14;
  optional string origUrl = 15;
  optional int32 bizType = 16;
  optional int32 result = 17;
  optional int32 index = 18;
  optional bytes opFaceBuf = 19;
  bool oldPictureMd5 = 20;
  optional int32 thumbWidth = 21;
  optional int32 thumbHeight = 22;
  optional int32 fileID = 23;
  optional int32 showLen = 24;
  optional int32 downloadLen = 25;
  optional bytes pbReserve = 29;
}

message CustomFace {
  optional bytes guid = 1;
  string filePath = 2;
  optional string shortcut = 3;
  optional bytes buffer = 4;
  optional bytes flag = 5;
  optional bytes oldData = 6;
  uint64 fileID = 7;
  optional int32 serverIP = 8;
  optional int32 serverPort = 9;
  int32 fileType = 10;
  optional bytes signature = 11;
  int32 useful = 12;
  bytes md5 = 13;
  optional string thumbUrl = 14;
  optional string bigUrl = 15;
  optional string origUrl = 16;
  int32 bizType = 17;
  optional int32 repeatIndex = 18;
  optional int32 repeatImage = 19;
  int32 imageType = 20;
  optional int32 index = 21;
  optional int32 width = 22;
  optional int32 height = 23;
  optional int32 source = 24;
  int32 size = 25;
  optional int32 origin = 26;
  optional int32 thumbWidth = 27;
  optional int32 thumbHeight = 28;
  optional int32 showLen = 29;
  optional int32 downloadLen = 30;
  optional string X400Url = 31;
  optional int32 X400Width = 32;
  optional int32 X400Height = 33;
  optional bytes pbReserve = 34;
}

message ResvAttributes {
  optional uint32 imageBizType = 1;
  optional AnimationImageShow imageShow = 7;
}

message AnimationImageShow {
  optional int32 effectID = 1;
  optional bytes animationParam = 2;
}

message AnonymousGroupMessage {
  optional int32 flags = 1;
  optional bytes id = 2;
  optional bytes nick = 3;
  optional int32 headPortrait = 4;
  optional int32 expireTime = 5;
  optional int32 bubbleID = 6;
  optional bytes rankColor = 7;
}
